force-app/main/default/objects/IOCCheckList__mdt/IOCCheckList__mdt.object-meta.xml
<CustomObject>
    <description>IOC: Event Action Plan checklist.</description>
    <label>IOC Checklist</label>
    <pluralLabel>IOC Checklists</pluralLabel>
</CustomObject>