force-app/main/default/objects/IOCCheckList__mdt/fields/Flow_Action__c.field-meta.xml
<CustomField>
    <fullName>Flow_Action__c</fullName>
    <label>Flow Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>