force-app/main/default/objects/IOCCheckList__mdt/fields/HelpText__c.field-meta.xml
<CustomField>
    <fullName>HelpText__c</fullName>
    <description>IOC Help text to be displayed on lightning component</description>
    <label>Help Text</label>
    <type>TextArea</type>
</CustomField>