force-app/main/default/objects/IOCCheckList__mdt/fields/OwnerQueueUserName__c.field-meta.xml
<CustomField>
    <fullName>OwnerQueueUserName__c</fullName>
    <description>IOC: User or Queue Name</description>
    <label>OwnerQueue/User Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>