force-app/main/default/objects/IOCCheckList__mdt/fields/ReadAccessProfiles__c.field-meta.xml
<CustomField>
    <fullName>ReadAccessProfiles__c</fullName>
    <description>IOC: Add the Read Access profile name.</description>
    <label>Read Access Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>