force-app/main/default/objects/IOCCheckList__mdt/fields/ValidType__c.field-meta.xml
<CustomField>
    <fullName>ValidType__c</fullName>
    <description>IOC: Valid types</description>
    <label>ValidType</label>
    <type>TextArea</type>
</CustomField>