force-app/main/default/objects/IOCCheckList__mdt/fields/WriteAccessProfiles__c.field-meta.xml
<CustomField>
    <fullName>WriteAccessProfiles__c</fullName>
    <description>IOC Write Access profile Names</description>
    <label>Write Access Profiles</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>