force-app/main/default/objects/IOCCheckList__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>HelpText__c</columns>
    <columns>OwnerQueueUserName__c</columns>
    <columns>Priority__c</columns>
    <columns>ReadAccessProfiles__c</columns>
    <columns>WriteAccessProfiles__c</columns>
    <columns>ValidType__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>